2009-12-01  Jb Evain  <jbevain@novell.com>

	* TypeTest.cs: add test for MakeByRefType on a ByRef type.

2009-11-25  Zoltan Varga  <vargaz@gmail.com>

	* DelegateTest.cs: Add a test for GetHashCode ().

2009-11-24  Jb Evain  <jbevain@novell.com>

	* ArrayTest.cs: test that we don't allow the use of the IList indexer
	on a multi dimensional array.

2009-11-24  Jb Evain  <jbevain@novell.com>

	* ArrayTest: test for the proper exception on Clear ().

2009-11-24  Jb Evain  <jbevain@novell.com>

	* ArrayTest.cs: add test ensuring we do not allow open
	generic types in CreateInstance.

2009-11-24  Jb Evain <jbevain@novell.com>

	* ArrayTest.cs: Add test ensuring we do not allow void arrays.

2009-11-17  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTimeOffsetTest.cs : add test for bug #547675.
	  patch by Santa Marta.

2009-11-08  Juraj Skripsky  <js@hotfeet.ch>

	* ArraySortArgChecks.cs: Added tests checking all possible exceptions
	the Array.Sort method can throw. 

2009-10-27  Sebastien Pouliot  <sebastien@ximian.com>

	* StringTest.cs: Add test case for methods that can return
	empty strings.

2009-10-26  Sebastien Pouliot  <sebastien@ximian.com>

	* TypeTest.cs: New. Add test cases for IsInstanceOfType

2009-10-22  Sebastien Pouliot  <sebastien@ximian.com>

	* WeakReferenceTest.cs: New. Basic test cases

2009-10-06  Jonathan Chambers  <joncham@gmail.com>

	* StringTest.cs (Contains): Add test for Contains using
	an Ordinal compare. Bug #535425.

2009-09-24  Zoltan Varga  <vargaz@gmail.com>

	* TypeTest.cs: Add a test for missing.

2009-09-18  Atsushi Enomoto  <atsushi@ximian.com>

	* StringTest.cs : add more normalization tests.

2009-08-26  Sebastien Pouliot  <sebastien@ximian.com>

	* TimeSpanTest.cs: Add test case where seconds are not specified.

2009-07-31 Rodrigo Kumpera  <rkumpera@novell.com>

	TypeTest.cs: Add test for Type::GetArrayRank.

2009-07-31 Rodrigo Kumpera  <rkumpera@novell.com>

	TypeTest.cs: Add test for Type::DeclaringMethod.